Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/Case_Response_Tracking__c.object-meta.xml
<CustomObject>
    <description>This is used to capture Handle Time for a case</description>
    <label>Case Response Tracking</label>
    <nameField>
        <displayFormat>CRT-{000000}</displayFormat>
        <label>Case Response Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Response Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>