Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Case_Response_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>