Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/Business_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Business_Seconds__c</fullName>
    <description>Populated by using salesforce method - BusinessHours.diff()</description>
    <inlineHelpText>Calculation of business seconds by using native business hours attached to case</inlineHelpText>
    <label>Business Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>