Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Response Tracking</relationshipLabel>
    <relationshipName>Case_Response_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>