Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/fxInclude_In_Customer_Waiting__c.field-meta.xml
<CustomField>
    <fullName>fxInclude_In_Customer_Waiting__c</fullName>
    <description>used to do summation in case rollup summary fields</description>
    <formula>IF(  OR(Status__c =&#39;Closed:Pending Customer&#39;,
       Status__c =&#39;Customer Hold&#39;,
       Status__c =&#39;InProgress:Waiting for Customer&#39;
      ), true, false)</formula>
    <inlineHelpText>The field would filter the records for add up time spent in the following status:  In Progress:Waiting for Customer and Customer Hold and Closed:Pending Customer</inlineHelpText>
    <label>fxInclude In Customer Waiting</label>
    <type>Checkbox</type>
</CustomField>