Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/fxTotal_Hours__c.field-meta.xml
<CustomField>
    <fullName>fxTotal_Hours__c</fullName>
    <description>Total hours calculated for change of status/owner</description>
    <formula>fxCalculatedSeconds__c / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation done for total hours for how long it was with that particular status or owner</inlineHelpText>
    <label>fxTotal Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>