Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/IsQueue__c.field-meta.xml
<CustomField>
    <fullName>IsQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flagged as true if Case Owner is a queue</inlineHelpText>
    <label>IsQueue</label>
    <type>Checkbox</type>
</CustomField>