Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/NativeQueueID__c.field-meta.xml
<CustomField>
    <fullName>NativeQueueID__c</fullName>
    <inlineHelpText>Stores the SFDC native queueId for Queue</inlineHelpText>
    <label>NativeQueueID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>