Perkin-UAT/force-app/main/default/objects/Case_Response_Tracking__c/fields/Updated_Status__c.field-meta.xml
<CustomField>
    <fullName>Updated_Status__c</fullName>
    <inlineHelpText>Used to store the new status value resulted as change of status in related Case</inlineHelpText>
    <label>Updated Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>